working cmake lists file to build berkelium

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,16 @@ IF(COMMAND CMAKE_POLICY)
   CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND CMAKE_POLICY)
 SET(BERKELIUM_TOP_LEVEL ${CMAKE_CURRENT_SOURCE_DIR})
-SET(CMAKE_MODULE_PATH ${BERKELIUM_TOP_LEVEL}/../../build/modules)
+SET(CMAKE_MODULE_PATH ${BERKELIUM_TOP_LEVEL})
 GET_FILENAME_COMPONENT(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ABSOLUTE)
 IF(NOT CHROME_ROOT)
   SET(CHROME_ROOT ${BERKELIUM_TOP_LEVEL}/../../dependencies/ch/c)
+  IF(NOT EXISTS ${CHROME_ROOT})
+    SET(CHROME_ROOT ${BERKELIUM_TOP_LEVEL}/chrome)
+    IF(NOT EXISTS ${CHROME_ROOT})
+      SET(CHROME_ROOT ${BERKELIUM_TOP_LEVEL}/chromium)
+    ENDIF()
+  ENDIF()
 ENDIF()
 FIND_PACKAGE(Chrome)
 
@@ -36,30 +42,19 @@ IF(CHROME_FOUND)
     SET(CHROMIUM_CFLAGS "${CHROMIUM_CFLAGS} ${CHROME_CFLAG}")
   ENDFOREACH()
 
-  ADD_LIBRARY(berkelium_stage ${BERKELIUM_SOURCES})
-  SET_TARGET_PROPERTIES(berkelium_stage PROPERTIES LINK_FLAGS "${CHROMIUM_LDFLAGS}")
-  SET_TARGET_PROPERTIES(berkelium_stage PROPERTIES COMPILE_FLAGS "${CHROMIUM_CFLAGS}")
-  SET_TARGET_PROPERTIES(berkelium_stage PROPERTIES DEBUG_POSTFIX "_d")
 
-
-  ADD_LIBRARY(libberkelium SHARED ${BERKELIUM_TOP_LEVEL}/src/Version.cpp)
-  TARGET_LINK_LIBRARIES(libberkelium berkelium_stage)
-  SET(BERKELIUM_LDFLAGS "")
-  FOREACH(BERKELIUM_SOURCE_FILE ${BERKELIUM_SOURCE_NAMES})
-    SET(BERKELIUM_LDFLAGS "${BERKELIUM_LDFLAGS} CMakeFiles/berkelium_stage.dir/${BERKELIUM_SOURCE_FILE}.o")
-  ENDFOREACH()
-  SET(BERKELIUM_LDFLAGS "${BERKELIUM_LDFLAGS} ${CHROMIUM_LDFLAGS}")
-
-
-  SET_TARGET_PROPERTIES(libberkelium PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+  ADD_LIBRARY(libberkelium SHARED ${BERKELIUM_SOURCES})
+  SET_TARGET_PROPERTIES(libberkelium PROPERTIES DEBUG_POSTFIX "_d")
+  SET_TARGET_PROPERTIES(libberkelium PROPERTIES LINK_FLAGS ${CHROMIUM_LDFLAGS})
   SET_TARGET_PROPERTIES(libberkelium PROPERTIES COMPILE_FLAGS "${CHROMIUM_CFLAGS}")
   SET_TARGET_PROPERTIES(libberkelium PROPERTIES DEBUG_POSTFIX "_d")
- 
+  TARGET_LINK_LIBRARIES(libberkelium ${CHROME_LIBRARIES})
+
   ADD_EXECUTABLE(ppmrender ${BERKELIUM_TOP_LEVEL}/ppmmain.cpp)
-  TARGET_LINK_LIBRARIES(ppmrender libberkelium)
+  TARGET_LINK_LIBRARIES(ppmrender libberkelium )
 
   ADD_EXECUTABLE(berkelium ${BERKELIUM_TOP_LEVEL}/subprocess.cpp)
-  TARGET_LINK_LIBRARIES(berkelium libberkelium)
+  TARGET_LINK_LIBRARIES(berkelium libberkelium )
 
 
 ENDIF(CHROME_FOUND)
