On linux we need symlinks both in the subproject dir as well as outside it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,10 @@ ENDIF()
 FIND_PACKAGE(Chrome)
 IF(BERKELIUM_LOCAL_SYMLINK_TARGET)
   ADD_CUSTOM_TARGET(${CHROME_SYMLINKS_COMMAND_TARGET} ALL COMMAND ${CHROME_SYMLINKS_COMMAND})
+ELSE()
+IF(NOT APPLE)
+  ADD_CUSTOM_TARGET(${CHROME_SYMLINKS_COMMAND_TARGET}.local ALL COMMAND ${CHROME_SYMLINKS_COMMAND} && ln -sf ${CHROME_SYMLINKS_COMMAND_TARGET} ${CHROME_SYMLINKS_COMMAND_TARGET}.local)
+ENDIF()
 ENDIF()
 
 SET(BERKELIUM_CHROME_FOUND ${CHROME_FOUND})
